--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 SERVER_PORT=8082
-MONGODB_URL=mongodb+srv://admin:admin@cluster0.56b3adg.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://admin:admin@cluster0.56b3adg.mongodb.net/?retryWrites=true&w=majority/xflix
